hphp/test/zend/good/Zend/tests/traits/language018.php.expectf
Fatal error: Trait use aliases cannot be declared abstract in %s/language018.php on line 7
